# poseestimator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  intrinsics.xml
cmake/: FindMathGL.cmake
include/: filesystem.hpp  mesh.hpp  model.hpp  poseestimator.hpp  renderer.hpp  timer.hpp  visualizer.hpp
models/: origin.blend
models/Iron_Man_mark_6/: Iron_Man_mark_6.dae  Iron_Man_mark_6.mtl  Iron_Man_mark_6_D.tga.002.tga  Iron_Man_mark_6_N.tga
models/Rigged_Hand/: Rigged_Hand.dae
models/duck/: duck.dae
models/elephant/: elephant.mtl
models/environment/: room.mtl
models/roboy/: model.config  model.sdf
models/roboy/dae/: 121213_PROTOTYP_Kopf-Hinterteil.dae  121213_PROTOTYP_Kopf-Vorderteil.dae  121213_PROTOTYP_Ohr-links_1.dae  121213_PROTOTYP_Ohr-rechts_1.dae  6-kt-mutter_M5.dae  Axiallager_SKF_BA7.dae  Beamer_Optoma_PK320.dae  CPU.dae  DIN_7991_-_M3_x_8_---_4.8C.dae  DIN_912_M2.5_x_16_---_16C.dae  DIN_913_-_M2_x_3-C.dae  Halterung_Beamer.dae  Halterung_Kamera.dae  Halterung_Kopf_8.dae  Halterung_Optik_4.dae  Hexagon_Nut_ISO_4032_-_M2.5_-_W_-_N.dae  Hexagon_Nut_ISO_4032_-_M4_-_W_-_N.dae  Hexagon_Thin_Nut_ISO_4035_-_M12_-_N.dae  Hexagon_Thin_Nut_ISO_4035_-_M2.5_-_C.dae  Hexagon_Thin_Nut_ISO_4035_-_M3_-_C.dae  ISO_2010_-_M2.5_x_10_---_10C.dae  Lensation-SH02M13_Default.dae  Lock_washer_DIN_6799_-_7.dae  PT35x16.dae  Parallel_Pin_ISO_2338_-_4_h6_x_10_-_St.dae  Sechskantmutter_ISO934-M3.dae  Sechskantmutter_M4_(BN115).dae  Senkschraube_mit_Innensechsrund_M2x10_(BN4851).dae  Socket_Head_Cap_Screw_DIN_DIN_912_M2_x_3_---_3N.dae  Washer_DIN_9021_-_5.3.dae  a-antriebstrang-ec16-v01-li.dae  a-antriebstrang-ec16-v01-re.dae  a-axialnadellager.dae  clamping_device_washer_din.dae  hex_thin_nut_chamfered_gradeab_din.dae  library_materials.dae  library_nodes.dae  mvBF-MLC-20.04.2010_Default.dae  n-se_schr_in_6kt_din_7991_m03x10.dae  n-tellerfeder-knoerzer-A0315.dae  (+130 more)
models/roboy_simplified/: model_simplified.sdf  model_simplified2.sdf  model_simplified3.sdf
models/roboy_simplified/dae/: 121213_PROTOTYP_Kopf-Hinterteil.dae  121213_PROTOTYP_Kopf-Vorderteil.dae  121213_PROTOTYP_Ohr-links_1.dae  121213_PROTOTYP_Ohr-rechts_1.dae  6-kt-mutter_M5.dae  Axiallager_SKF_BA7.dae  Beamer_Optoma_PK320.dae  CPU.dae  DIN_7991_-_M3_x_8_---_4.8C.dae  DIN_912_M2.5_x_16_---_16C.dae  DIN_913_-_M2_x_3-C.dae  Halterung_Beamer.dae  Halterung_Kamera.dae  Halterung_Kopf_8.dae  Halterung_Optik_4.dae  Hexagon_Nut_ISO_4032_-_M2.5_-_W_-_N.dae  Hexagon_Nut_ISO_4032_-_M4_-_W_-_N.dae  Hexagon_Thin_Nut_ISO_4035_-_M12_-_N.dae  Hexagon_Thin_Nut_ISO_4035_-_M2.5_-_C.dae  Hexagon_Thin_Nut_ISO_4035_-_M3_-_C.dae  ISO_2010_-_M2.5_x_10_---_10C.dae  Lensation-SH02M13_Default.dae  Lock_washer_DIN_6799_-_7.dae  PT35x16.dae  Parallel_Pin_ISO_2338_-_4_h6_x_10_-_St.dae  Sechskantmutter_ISO934-M3.dae  Sechskantmutter_M4_(BN115).dae  Senkschraube_mit_Innensechsrund_M2x10_(BN4851).dae  Socket_Head_Cap_Screw_DIN_DIN_912_M2_x_3_---_3N.dae  Washer_DIN_9021_-_5.3.dae  a-antriebstrang-ec16-v01-li.dae  a-antriebstrang-ec16-v01-re.dae  a-axialnadellager.dae  baugruppe_oberkoerper_fuer_mep.dae  clamping_device_washer_din.dae  hex_thin_nut_chamfered_gradeab_din.dae  mvBF-MLC-20.04.2010_Default.dae  n-se_schr_in_6kt_din_7991_m03x10.dae  n-tellerfeder-knoerzer-A0315.dae  n-zyl-schr-i6kt-M2.5x8_(BN11).dae  (+133 more)
models/simple/: sphere.dae  sphere.mtl
shader/: color.fragmentshader  color.vertexshader  color_simple.fragmentshader
src/: main.cpp  mesh.cpp  model.cpp  poseestimator.cu  renderer.cpp  visualizer.cpp
